# fcfs-rtfm

./: .gdbinit  .gitignore  .travis.yml  Cargo.toml  Makefile  README.md  build.rs  memory.x  openocd.cfg
.cargo/: config
contrib/: bytes_printed.py  influx.py  liveplot.gnu  print_influx.py  serial_dump.py  serial_print.py  timer.py
src/: ahrs.rs  blackbox.rs  boards.rs  bootloader.rs  chrono.rs  cmd.rs  communication.rs  controllers.rs  kalman.rs  logging.rs  main.rs  mixer.rs  prelude.rs  spsc.rs  telemetry.rs  types.rs  utils.rs
vis/: realtime.py  visualize_dcmimu.ipynb
