[package]
authors = ["Roma Sokolov", "Alexander Zhuravlev <123368+bofh@users.noreply.github.com>"]
edition = "2018"
name = "fcfs-rtfm"
readme = "README.md"
version = "0.1.0"
[[bin]]
bench = false
name = "fcfs-rtfm"
test = false

[dependencies]
cortex-m = {version = "0.6.0", features = ["inline-asm", "const-fn"]}
cortex-m-rt = "0.6.8"
panic-abort = "0.3.1"
ryu = "0.2"
nb = "0.1.1"
asm-delay = "0.7.0"
dcmimu = "0.2.1"
libm = "0.1.2"
heapless = {version = "0.4.2", features = ["const-fn", "smaller-atomics"]}
won2010 = { path = "../won2010", default-features = false }

[dependencies.cortex-m-log]
version = "0.6.0"
features = ["itm", "semihosting"]

[dependencies.cortex-m-rtfm]
git = "https://github.com/japaric/cortex-m-rtfm"
rev = "fafeeb27270ef24fc3852711c6032f65aa7dbcc0"
features = ["timer-queue"]

[dependencies.mpu9250]
version = "0.12"
# path = "../mpu9250"
# git = "https://github.com/copterust/mpu9250"

[dependencies.ehal]
features = ["unproven"]
version = "0.2.2"
package = "embedded-hal"

[dependencies.hal]
version = "0.20"
# path = "../alt-stm32f30x-hal"
package = "alt-stm32f30x-hal"
features = ["rt", "stm32f303"]

[dependencies.nalgebra]
default-features = false
version = "0.18"

[profile]
[profile.release]
panic = "abort"
opt-level = "z"
codegen-units = 1
debug = true
lto = true
incremental = false # nalgebra

[build-dependencies]
cfg_feature_groups = "0.1.1"

[features]
log_semihosting = []
log_dummy = []
log_itm = []
level_info = []
level_debug = []
level_error = []
telemetry_bytes = []
telemetry_words = []
telemetry_dummy = []
configuration_drone = []
configuration_dev = []
# default = ["log_semihosting",
#            "level_debug",
#            "telemetry_bytes",
#            "configuration_dev"]

[package.metadata.feature_groups]
log = ["log_semihosting", "log_dummy", "log_itm"]
level = ["level_debug", "level_info", "level_error"]
telemetry = ["telemetry_bytes", "telemetry_words", "telemetry_dummy"]
configuration = ["configuration_drone", "configuration_dev"]
