cargo-features = ["profile-overrides"]

[package]
authors = ["Roma Sokolov", "Alexander Zhuravlev <123368+bofh@users.noreply.github.com>"]
edition = "2018"
name = "fcfs-rtfm"
readme = "README.md"
version = "0.1.0"

[[bin]]
bench = false
name = "fcfs-rtfm"
test = false

[dependencies]
cortex-m = {version = "0.6.3", features = ["inline-asm"]}
cortex-m-rt = "0.6.12"
ryu = "1.0.2"
nb = "0.1.2"
asm-delay = "0.7.2"
dcmimu = "0.2.1"
libm = "0.1.4"
heapless = {version = "0.5.1"}

[dependencies.cortex-m-log]
version = "0.6.1"
features = ["itm", "semihosting"]

[dependencies.cortex-m-rtic]
version = "0.5.3"

[dependencies.mpu9250]
version = "0.20"
# path = "../mpu9250"
# git = "https://github.com/copterust/mpu9250"

[dependencies.ehal]
features = ["unproven"]
version = "=0.2.4"
package = "embedded-hal"

[dependencies.hal]
version = "0.24"
# path = "../alt-stm32f30x-hal"
package = "alt-stm32f30x-hal"
features = ["rt", "stm32f303"]

[profile]
[profile.release]
panic = "abort"
opt-level = "z"
codegen-units = 1
debug = true
lto = true
incremental = false

[profile.dev]
opt-level = 0
codegen-units = 1
debug = true
lto = true
incremental = false
[profile.dev.package."*"]
opt-level = "z"

[build-dependencies]
cfg_feature_groups = "0.1.1"

[features]
log_semihosting = []
log_dummy = []
log_itm = []
level_info = []
level_debug = []
level_error = []
configuration_drone = []
configuration_dev = []
motors_quad = []
motors_hex = []
default = ["log_semihosting",
           "level_debug",
           "configuration_dev",
           "motors_quad"]

[package.metadata.feature_groups]
log = ["log_semihosting", "log_dummy", "log_itm"]
level = ["level_debug", "level_info", "level_error"]
configuration = ["configuration_drone", "configuration_dev"]
motors = ["motors_quad", "motors_hex"]
