cargo-features = ["profile-overrides"]

[package]
authors = ["Roma Sokolov", "Alexander Zhuravlev <123368+bofh@users.noreply.github.com>"]
edition = "2018"
name = "fcfs-rtfm"
readme = "README.md"
version = "0.1.0"

[[bin]]
bench = false
name = "fcfs-rtfm"
test = false

[dependencies]
cortex-m = {version = "0.7.6", features = ["inline-asm"]}
cortex-m-rt = "0.7.1"
ryu = "1.0.11"
nb = "1.0.0"
asm-delay = "0.7.2"
dcmimu = "0.2.1"
libm = "0.2.5"
heapless = {version = "0.7.16"}
embedded-time = "0.12.1"

[dependencies.cortex-m-log]
version = "0.7"
features = ["itm", "semihosting"]

[dependencies.cortex-m-rtic]
version = "1.1.3"
# git = "https://github.com/copterust/cortex-m-rtic"
# branch = "feature-configurable-binds"
# path = "../japaric/cortex-m-rtfm"

[dependencies.mpu9250]
version = "0.24"
# path = "../mpu9250"
# git = "https://github.com/copterust/mpu9250"

[dependencies.ehal]
features = ["unproven"]
version = "0.2.7"
package = "embedded-hal"

[dependencies.hal]
version = "0.44"
# path = "../alt-stm32f30x-hal"
package = "alt-stm32f30x-hal"
features = ["rt", "stm32f303"]

[profile]
[profile.release]
panic = "abort"
opt-level = "z"
codegen-units = 1
debug = true
lto = true
incremental = false

[profile.dev]
opt-level = 0
codegen-units = 1
debug = true
lto = true
incremental = false
[profile.dev.package."*"]
opt-level = "z"

[build-dependencies]
cfg_feature_groups = "0.1.1"

[features]
log_semihosting = []
log_dummy = []
log_itm = []
level_info = []
level_debug = []
level_error = []
configuration_drone = []
configuration_dev = []
motors_quad = []
motors_hex = []
default = ["log_semihosting",
           "level_debug",
           "configuration_dev",
           "motors_quad"]

[package.metadata.feature_groups]
log = ["log_semihosting", "log_dummy", "log_itm"]
level = ["level_debug", "level_info", "level_error"]
configuration = ["configuration_drone", "configuration_dev"]
motors = ["motors_quad", "motors_hex"]
